...
  const color = selected ? themes.AppAccentColor : themes.AppSecondaryColor;

  if (props.price){
    return (
      <View style={styles.priceBoxContainer}>
        <TouchableOpacity
          testID={'SizePriceItem'}
          style={[
            styles.priceBox,
            selected ? {backgroundColor: themes.AppSecondaryColor} : {},
          ]}
          onPress={(): void => props.onSelect(props.size)}>
          <View style={[styles.priceTextContainer]}>
...
    tempSizes.push('50');
  }


  return (
    <FlatList
      testID={'SizePriceList'}
      style={{
        flex: 1,
        marginTop: 0,
        paddingTop: 8,
        paddingLeft: 20,
        paddingRight: 10,
...
