...
    super(props);
    this.state = {}
  }

  public render(): JSX.Element {
    return (
      <ImageBackground source={images.Home} style={{ flex: 1 }} testID={'LoginScreen'}>
        <SafeAreaView style={{ flex: 1 }}>
          <StatusBar barStyle={'light-content'} />
          {!this.props.profileState.profile && (
            <View style={{ flex: 1, alignItems: 'center', marginBottom: 10 }}>
              <View style={styles.buttonContainer}>
                {FeatureFlags.enableFacebook && this._renderFacebookLogin()}
...
    );
  }

  private _renderEmailVerify() {
    return (
      <Button
        testID={'EmailVerifyButton'}
        type={'outline'}
        buttonStyle={{
          backgroundColor: themes.AppSecondaryColor,
          ...styles.button,
        }}
        title={strings.SignUpEmail}
...
